[gd_scene load_steps=5 format=2]

[ext_resource path="res://asset/game/bg.png" type="Texture" id=1]
[ext_resource path="res://asset/menu/menu.gd" type="Script" id=2]
[ext_resource path="res://asset/menu/play.png" type="Texture" id=3]
[ext_resource path="res://asset/ui/fonts/montserrat_eb_86.tres" type="DynamicFont" id=4]

[node name="menu" type="Node"]
script = ExtResource( 2 )

[node name="bg" type="TextureRect" parent="."]
modulate = Color( 0, 0.647059, 1, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="cloud_spawn_point" type="Control" parent="."]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 141.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer"]
margin_top = 310.0
margin_right = 600.0
margin_bottom = 510.0
rect_min_size = Vector2( 200, 200 )
size_flags_horizontal = 7
custom_fonts/font = ExtResource( 4 )
text = "Baloon Pop"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton" type="TextureButton" parent="VBoxContainer"]
margin_left = 200.0
margin_top = 514.0
margin_right = 400.0
margin_bottom = 714.0
rect_min_size = Vector2( 200, 200 )
size_flags_horizontal = 4
texture_normal = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="gui_input" from="bg" to="." method="_on_TextureRect_gui_input"]
[connection signal="pressed" from="VBoxContainer/TextureButton" to="." method="_on_TextureButton_pressed"]
